broken css fixed

--- a/ReactSrc/src/components/style.css
+++ b/ReactSrc/src/components/style.css
@@ -8,7 +8,7 @@ a {
   font-weight: bold;
   text-decoration: none;
   transition: color 0.4s;
-  cursor: pointer
+  cursor: pointer;
 }
 
 a:hover {
@@ -16,7 +16,7 @@ a:hover {
 }
 .wrap {
   max-width: 90vw;
-  margin: auto
+  margin: auto;
 }
 .text-center {
   text-align: center;
@@ -24,7 +24,10 @@ a:hover {
 
 .top-bar {
   padding: 10px 15px;
+  max-width: 1280px;
+  margin: 0 auto;
   margin-bottom: 50px;
+  border-bottom: 1px solid #00bcd4;
 }
 .top-bar::after {
   content: '';
@@ -56,7 +59,8 @@ a:hover {
   padding: 16px;
 }
 
-.field-line, .button-line {
+.field-line,
+.button-line {
   padding: 16px;
 }
 
@@ -69,4 +73,3 @@ a:hover {
   padding: 0 16px;
   color: green;
 }
-
